# storm-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
config/examples/: finalverse_world.toml  opensim_world.toml  storm_config.toml
crates/storm-ai/: Cargo.toml
crates/storm-ai/src/: dispatcher.rs  grok.rs  lib.rs  local_ml.rs  models.rs
crates/storm-assets/: Cargo.toml
crates/storm-assets/src/: cache.rs  lib.rs  loaders.rs  processors.rs
crates/storm-audio/: Cargo.toml
crates/storm-audio/src/: lib.rs
crates/storm-avatar/: Cargo.toml
crates/storm-avatar/src/: archetype.rs  components.rs  customization.rs  generation.rs  lib.rs  resonance.rs  serialization.rs  systems.rs
crates/storm-core/: Cargo.toml
crates/storm-core/src/: error.rs  lib.rs
crates/storm-core/src/core/: config.rs  handle.rs  mod.rs  world.rs
crates/storm-core/src/world/: mod.rs
crates/storm-digital-human/: Cargo.toml
crates/storm-digital-human/src/: animation.rs  behavior.rs  dialogue.rs  emotion.rs  lib.rs  memory.rs  personality.rs  relationships.rs
crates/storm-ecs/: Cargo.toml
crates/storm-ecs/src/: lib.rs
crates/storm-ffi/: Cargo.toml  storm_core.h
crates/storm-ffi-kotlin/: Cargo.toml
crates/storm-ffi-kotlin/src/: lib.rs
crates/storm-ffi-swift/: Cargo.toml
crates/storm-ffi-swift/src/: lib.rs
crates/storm-ffi/src/: avatar.rs  callbacks.rs  error.rs  handle.rs  lib.rs
crates/storm-finalverse/: Cargo.toml
crates/storm-finalverse/src/: auth.rs  lib.rs  messages.rs  rest_api.rs  websocket.rs
crates/storm-math/: Cargo.toml
crates/storm-math/src/: lib.rs  quaternion.rs  spatial.rs  transform.rs  vector.rs
crates/storm-networking/: Cargo.toml
crates/storm-networking/src/: connection.rs  lib.rs  packet.rs  protocol.rs
crates/storm-opensim/: Cargo.toml
crates/storm-opensim/src/: circuit.rs  enhanced_adapter.rs  lib.rs  login.rs  messages.rs  serialization.rs
crates/storm-physics/: Cargo.toml
crates/storm-physics/src/: lib.rs
crates/storm-protocol-adapters/: Cargo.toml
crates/storm-protocol-adapters/src/: base.rs  core.rs  finalverse.rs  lib.rs  opensim.rs
crates/storm-rendering/: Cargo.toml
crates/storm-rendering/src/: lib.rs
crates/storm-wasm/: Cargo.toml
crates/storm-wasm/src/: lib.rs
docs/: README_BUILD_FIX.md  StormCore-HLD-v3.1-1.md  StormCore-HLD-v3.1-2.md  StormCore-LLD-v1.0-01.md  StormCore-LLD-v1.0-02.md  StormCore-LLD-v1.0-03.md
examples/: main.rs
examples/opensim-client/: Cargo.toml
examples/opensim-client/src/: main.rs
examples/virtual-world-showcase/: Cargo.toml
examples/virtual-world-showcase/src/: main.rs
examples/wasm-client/: Cargo.toml  index.html  wasm-pack-build.sh
examples/wasm-client/src/: lib.rs
scripts/: clean_all.sh  quick_build.sh  run_tests.sh
services/ai-orchestrator/: Cargo.toml
services/ai-orchestrator/src/: lib.rs
services/avatar-ai/: Cargo.toml
services/avatar-ai/src/: lib.rs
services/content-moderator/: Cargo.toml
services/content-moderator/src/: lib.rs
services/world-generator/: Cargo.toml
services/world-generator/src/: lib.rs
tests/: basic_integration.rs
tools/asset-processor/: Cargo.toml
tools/asset-processor/src/: main.rs
tools/code-gen/: Cargo.toml
tools/code-gen/src/: main.rs
tools/protocol-tester/: Cargo.toml
tools/protocol-tester/src/: main.rs
tools/world-builder/: Cargo.toml
tools/world-builder/src/: main.rs
