# File: storm-core/Cargo.toml
# Description: Main workspace configuration for StormCore engine
# Coordinates all crates and manages shared dependencies

[workspace]
members = [
    "crates/storm-core",
    "crates/storm-ecs",
    "crates/storm-math",
    "crates/storm-ai",
    "crates/storm-networking",
    "crates/storm-protocol-adapters",
    "crates/storm-rendering",
    "crates/storm-audio",
    "crates/storm-physics",
    "crates/storm-assets",
    "crates/storm-avatar",
    "crates/storm-digital-human",
    "crates/storm-opensim",
    "crates/storm-finalverse",
    "crates/storm-wasm",
    "crates/storm-ffi",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StormCore Team <team@stormcore.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/finalverse/finalverse"
homepage = "https://finalverse.com"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", default-features = false }
futures = "0.3.30"
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.141"
bincode = "1.3.3"

# Math and graphics
glam = { version = "0.27", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# Networking
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
quinn = "0.10"
reqwest = { version = "0.11", default-features = false }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
thiserror = "1.0.56"
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Data processing
zstd = "0.13"
rand = "0.8.5"
noise = "0.8"
ordered-float = "4.2"

# AI/ML
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

# WASM support
getrandom = "0.2"

# Development
criterion = "0.5"
mockall = "0.12"

# Internal workspace dependencies (defined by path in individual crates)
storm-core =        { path = "crates/storm-core" }
storm-ecs =         { path = "crates/storm-ecs" }
storm-math =        { path = "crates/storm-math" }
storm-ai =          { path = "crates/storm-ai" }
storm-networking =  { path = "crates/storm-networking" }
storm-assets =      { path = "crates/storm-assets" }
storm-avatar =      { path = "crates/storm-avatar" }

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true