# File: crates/storm-digital-human/Cargo.toml
# Description: Digital human and NPC behavior system
# Implements AI-driven characters with emotional intelligence

[package]
name = "storm-digital-human"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
storm-ecs = { workspace = true }
storm-math = { workspace = true }
storm-avatar = { workspace = true }
storm-ai = { workspace = true }
# storm-narrative = { workspace = true }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ordered-float = { workspace = true }
petgraph = "0.6"  # For relationship graphs

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"