# File: crates/storm-finalverse/Cargo.toml
[package]
name = "storm-finalverse"
version = "0.1.0"
edition = "2021"
authors = ["StormCore Team"]
license = "MIT"
description = "Finalverse protocol implementation for StormCore"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# WebSocket support
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# HTTP client with proper error trait support
reqwest = { version = "0.11", features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.4"
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Cryptography for authentication
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
testing = []