# File: crates/storm-networking/Cargo.toml
[package]
name = "storm-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Async networking layer for StormCore"

[dependencies]
tokio = { workspace = true, features = ["net", "sync", "time"] }
futures.workspace = true
async-trait.workspace = true  # THIS WAS MISSING
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Networking
tokio-tungstenite.workspace = true
quinn.workspace = true
zstd.workspace = true

# Utilities
bytes = "1.5"