# File: tools/asset-processor/Cargo.toml
[package]
name = "storm-asset-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Asset processing tool for StormCore"

[dependencies]
storm-assets = { path = "../../crates/storm-assets" }
storm-math = { path = "../../crates/storm-math" }

# Asset processing
image = "0.24"
gltf = "1.4"

# Utilities
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"