# File: tools/protocol-tester/Cargo.toml
[package]
name = "storm-protocol-tester"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protocol testing tool for StormCore"

[dependencies]
storm-core = { path = "../../crates/storm-core", features = ["protocol-opensim", "protocol-finalverse"] }
storm-networking = { path = "../../crates/storm-networking" }
storm-protocol-adapters = { path = "../../crates/storm-protocol-adapters" }

# Testing utilities
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4.0", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true